<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.helio-ecosystem</groupId>
	<artifactId>helio-publisher</artifactId>
	<version>0.4.0</version>
	<name>Helio Publisher</name>
	<description></description>

	<properties>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.release>11</maven.compiler.release>
		<slf4jVersion>1.6.1</slf4jVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.sparkjava</groupId>
			<artifactId>spark-core</artifactId>
			<version>2.9.3</version>
		</dependency>
		<dependency>
			<groupId>com.sparkjava</groupId>
			<artifactId>spark-template-velocity</artifactId>
			<version>2.7.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.13.4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.1.210</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
		<dependency>
		    <groupId>org.hibernate.orm</groupId>
		    <artifactId>hibernate-core</artifactId>
		    <version>6.1.3.Final</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
		<dependency>
		    <groupId>org.hibernate.validator</groupId>
		    <artifactId>hibernate-validator</artifactId>
		    <version>8.0.0.Final</version>
		</dependency>
		<dependency>
		    <groupId>org.glassfish.expressly</groupId>
		    <artifactId>expressly</artifactId>
		    <version>5.0.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.9.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.jsonld-java</groupId>
			<artifactId>jsonld-java</artifactId>
			<version>0.13.4</version>
		</dependency>
		<dependency>
			<groupId>io.github.andreacimminoarriaga</groupId>
			<artifactId>sparql-streamline</artifactId>
			<version>1.1.6</version>
		</dependency>
		
		<dependency>
			<groupId>com.sparkjava</groupId>
			<artifactId>spark-template-freemarker</artifactId>
			<version>2.7.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		    <version>1.15</version>
		</dependency>
		<!-- JavaFx -->
		     <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>13</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>13</version>
        </dependency>
        <dependency>
		  <groupId>org.openjfx</groupId>
		  <artifactId>javafx-controls</artifactId>
		  <version>13</version>
		</dependency>
		<dependency>
		  <groupId>org.openjfx</groupId>
		  <artifactId>javafx-fxml</artifactId>
		  <version>13</version>
		</dependency>
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-graphics</artifactId>
		    <version>13</version>
		    <classifier>win</classifier>
		</dependency>
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-graphics</artifactId>
		    <version>13</version>
		    <classifier>linux</classifier>
		</dependency>
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-graphics</artifactId>
		    <version>13</version>
		    <classifier>mac</classifier>
		</dependency>
		<dependency>
		  <groupId>org.openjfx</groupId>
		  <artifactId>javafx-controls</artifactId>
		  <version>18.0.2</version>
		  <classifier>mac-aarch64</classifier>
		</dependency>
	</dependencies>

	<build>
		<plugins>
		 	<plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-shade-plugin</artifactId>
    <version>3.2.1</version>
    <executions>
        <execution>
            <phase>package</phase>
            <goals>
                <goal>shade</goal>
            </goals>
            <configuration>
                <transformers>
                    <transformer implementation=
                                         "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                        <mainClass>publisher.Publisher</mainClass>
                    </transformer>
                </transformers>
            </configuration>
        </execution>
    </executions>
</plugin>
           
		</plugins>
	</build>

</project>
